--- a/app/src/debug/res/xml/network_security_config.xml
+++ b/app/src/debug/res/xml/network_security_config.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config>
-        <domain includeSubdomains="true">api.tangem.com</domain>
+    <base-config cleartextTrafficPermitted="true">
         <trust-anchors>
             <certificates src="user" />
             <certificates src="system" />
         </trust-anchors>
-    </domain-config>
-
-    <base-config cleartextTrafficPermitted="false" />
+    </base-config>
 </network-security-config>
