--- a/app/src/main/res/layout/layout_pseudo_toolbar.xml
+++ b/app/src/main/res/layout/layout_pseudo_toolbar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/pseudo_toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/background_action"
+    android:background="@color/background_primary"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
