--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -80,4 +80,6 @@
 
     <color name="background_splash">#000000</color>
     <color name="transparent">#00000000</color>
+
+    <color name="card_background">#1B1D1C</color>
 </resources>
