--- a/app/src/main/res/layout/layout_balance.xml
+++ b/app/src/main/res/layout/layout_balance.xml
@@ -38,41 +38,40 @@
         app:layout_constraintTop_toBottomOf="@id/tv_currency"
         tools:visibility="visible" />
 
-    <TextView
-        android:id="@+id/tv_status_error"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawablePadding="5dp"
-        android:paddingStart="16dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="16dp"
-        android:text="@string/wallet_balance_blockchain_unreachable"
-        android:textColor="@color/warning"
-        android:textSize="14sp"
-        android:visibility="gone"
-        app:drawableStartCompat="@drawable/ic_warning_small"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_currency" />
-
-    <TextView
-        android:id="@+id/tv_status_error_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="16dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="16dp"
-        android:textColor="@color/darkGray2"
-        android:textSize="14sp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_status_error" />
-
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group_error"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="tv_status_error, tv_status_error_message" />
+    <!-- TODO: Delete with WalletFeatureToggles -->
+    <!--<TextView-->
+    <!--    android:id="@+id/tv_status_error"-->
+    <!--    android:layout_width="wrap_content"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:drawablePadding="5dp"-->
+    <!--    android:paddingStart="16dp"-->
+    <!--    android:paddingTop="4dp"-->
+    <!--    android:paddingEnd="16dp"-->
+    <!--    android:text="@string/wallet_balance_blockchain_unreachable"-->
+    <!--    android:textColor="@color/warning"-->
+    <!--    android:textSize="14sp"-->
+    <!--    android:visibility="gone"-->
+    <!--    app:drawableStartCompat="@drawable/ic_warning_small"-->
+    <!--    app:layout_constraintStart_toStartOf="parent"-->
+    <!--    app:layout_constraintTop_toBottomOf="@id/tv_currency" />-->
+    <!--<TextView-->
+    <!--    android:id="@+id/tv_status_error_message"-->
+    <!--    android:layout_width="wrap_content"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:paddingStart="16dp"-->
+    <!--    android:paddingTop="4dp"-->
+    <!--    android:paddingEnd="16dp"-->
+    <!--    android:textColor="@color/darkGray2"-->
+    <!--    android:textSize="14sp"-->
+    <!--    android:visibility="gone"-->
+    <!--    app:layout_constraintStart_toStartOf="parent"-->
+    <!--    app:layout_constraintTop_toBottomOf="@id/tv_status_error" />-->
+    <!--<androidx.constraintlayout.widget.Group-->
+    <!--    android:id="@+id/group_error"-->
+    <!--    android:layout_width="wrap_content"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:visibility="gone"-->
+    <!--    app:constraint_referenced_ids="tv_status_error, tv_status_error_message" />-->
 
     <TextView
         android:id="@+id/tv_status_loading"
