--- a/app/src/main/res/layout/layout_single_wallet_balance.xml
+++ b/app/src/main/res/layout/layout_single_wallet_balance.xml
@@ -29,78 +29,73 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.skydoves.androidveil.VeilLayout
-            android:id="@+id/veil_balance"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            app:layout_constraintBottom_toTopOf="@id/tv_processing"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"
-            app:veilLayout_baseColor="@color/lightGray0"
-            app:veilLayout_highlightColor="@color/lightGray1"
-            app:veilLayout_layout="@layout/card_total_balance_shimmer"
-            app:veilLayout_radius="4dp"
-            app:veilLayout_shimmerEnable="true"
-            app:veilLayout_veiled="true"
-            tools:veilLayout_veiled="false">
-
-            <TextView
-                android:id="@+id/tv_balance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:minWidth="152dp"
-                android:textColor="@color/text_primary_1"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                tools:text="22 325.40 $" />
-
-        </com.skydoves.androidveil.VeilLayout>
-
-        <com.skydoves.androidveil.VeilLayout
-            android:id="@+id/veil_balance_crypto"
-            android:layout_width="wrap_content"
-            android:layout_height="18dp"
-            android:layout_marginTop="4dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/veil_balance"
-            app:veilLayout_baseColor="@color/lightGray0"
-            app:veilLayout_highlightColor="@color/lightGray1"
-            app:veilLayout_layout="@layout/card_total_balance_shimmer"
-            app:veilLayout_radius="4dp"
-            app:veilLayout_shimmerEnable="true"
-            app:veilLayout_veiled="true"
-            tools:veilLayout_veiled="false"
-            tools:visibility="visible">
-
-            <TextView
-                android:id="@+id/tv_balance_crypto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:maxLines="1"
-                android:minWidth="152dp"
-                android:textColor="@color/text_tertiary"
-                android:textSize="12sp"
-                tools:text="5.13123123123 ETH"
-                tools:visibility="visible" />
-
-        </com.skydoves.androidveil.VeilLayout>
-
-        <TextView
-            android:id="@+id/tv_processing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:text="@string/wallet_balance_blockchain_unreachable"
-            android:textColor="@color/warning"
-            android:textSize="12sp"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/veil_balance"
-            tools:visibility="visible" />
+        <!--TODO: Delete with WalletFeatureToggles-->
+        <!--<com.skydoves.androidveil.VeilLayout-->
+        <!--    android:id="@+id/veil_balance"-->
+        <!--    android:layout_width="0dp"-->
+        <!--    android:layout_height="wrap_content"-->
+        <!--    android:layout_marginTop="4dp"-->
+        <!--    app:layout_constraintBottom_toTopOf="@id/tv_processing"-->
+        <!--    app:layout_constraintEnd_toEndOf="parent"-->
+        <!--    app:layout_constraintStart_toStartOf="parent"-->
+        <!--    app:layout_constraintTop_toBottomOf="@id/tv_title"-->
+        <!--    app:veilLayout_baseColor="@color/lightGray0"-->
+        <!--    app:veilLayout_highlightColor="@color/lightGray1"-->
+        <!--    app:veilLayout_layout="@layout/card_total_balance_shimmer"-->
+        <!--    app:veilLayout_radius="4dp"-->
+        <!--    app:veilLayout_shimmerEnable="true"-->
+        <!--    app:veilLayout_veiled="true"-->
+        <!--    tools:veilLayout_veiled="false">-->
+        <!--    <TextView-->
+        <!--        android:id="@+id/tv_balance"-->
+        <!--        android:layout_width="wrap_content"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:maxLines="1"-->
+        <!--        android:minWidth="152dp"-->
+        <!--        android:textColor="@color/text_primary_1"-->
+        <!--        android:textSize="24sp"-->
+        <!--        android:textStyle="bold"-->
+        <!--        tools:text="22 325.40 $" />-->
+        <!--</com.skydoves.androidveil.VeilLayout>-->
+        <!-- <com.skydoves.androidveil.VeilLayout
+             android:id="@+id/veil_balance_crypto"
+             android:layout_width="wrap_content"
+             android:layout_height="18dp"
+             android:layout_marginTop="4dp"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintTop_toBottomOf="@id/veil_balance"
+             app:veilLayout_baseColor="@color/lightGray0"
+             app:veilLayout_highlightColor="@color/lightGray1"
+             app:veilLayout_layout="@layout/card_total_balance_shimmer"
+             app:veilLayout_radius="4dp"
+             app:veilLayout_shimmerEnable="true"
+             app:veilLayout_veiled="true"
+             tools:veilLayout_veiled="false"
+             tools:visibility="visible">
+             <TextView
+                 android:id="@+id/tv_balance_crypto"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="2dp"
+                 android:maxLines="1"
+                 android:minWidth="152dp"
+                 android:textColor="@color/text_tertiary"
+                 android:textSize="12sp"
+                 tools:text="5.13123123123 ETH"
+                 tools:visibility="visible" />
+         </com.skydoves.androidveil.VeilLayout>-->
+        <!--<TextView-->
+        <!--    android:id="@+id/tv_processing"-->
+        <!--    android:layout_width="wrap_content"-->
+        <!--    android:layout_height="wrap_content"-->
+        <!--    android:layout_marginTop="2dp"-->
+        <!--    android:text="@string/wallet_balance_blockchain_unreachable"-->
+        <!--    android:textColor="@color/warning"-->
+        <!--    android:textSize="12sp"-->
+        <!--    android:visibility="gone"-->
+        <!--    app:layout_constraintStart_toStartOf="parent"-->
+        <!--    app:layout_constraintTop_toBottomOf="@id/veil_balance"-->
+        <!--    tools:visibility="visible" />-->
 
         <TextView
             android:id="@+id/tv_currency_name"
