--- a/app/src/main/res/layout/layout_warning_card_action.xml
+++ b/app/src/main/res/layout/layout_warning_card_action.xml
@@ -45,17 +45,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/warning_content_container" />
 
-        <Button
-            android:id="@+id/btn_can_be_better"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-16dp"
-            android:text="@string/warning_button_can_be_better"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white"
-            app:layout_constraintEnd_toStartOf="@+id/btn_really_cool"
-            app:layout_constraintTop_toBottomOf="@+id/warning_content_container" />
+        <!--TODO: Delete with WalletFeatureToggles-->
+        <!--<Button-->
+        <!--    android:id="@+id/btn_can_be_better"-->
+        <!--    style="@style/Widget.AppCompat.Button.Borderless"-->
+        <!--    android:layout_width="wrap_content"-->
+        <!--    android:layout_height="wrap_content"-->
+        <!--    android:layout_marginTop="-16dp"-->
+        <!--    android:text="@string/warning_button_can_be_better"-->
+        <!--    android:textAllCaps="false"-->
+        <!--    android:textColor="@android:color/white"-->
+        <!--    app:layout_constraintEnd_toStartOf="@+id/btn_really_cool"-->
+        <!--    app:layout_constraintTop_toBottomOf="@+id/warning_content_container" />-->
 
         <Button
             android:id="@+id/btn_really_cool"
